feat: add /findPostsForTimeline endpoint - BACKEND